objects/SetupTest__c.object
<CustomObject>
    <fields>
        <fullName>Test123__c</fullName>
        <description>cdscc</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>dcdscdsc</inlineHelpText>
        <label>Test123</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TstFor__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>axsacsdscd</inlineHelpText>
        <label>TstFor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qsw__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>qsw</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>